--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 25%;
+  width: 10%;
   background-color: #f1f1f1;
   position: fixed;
   height: 100%;
@@ -24,4 +24,11 @@ li a.active {
 li a:hover:not(.active) {
   background-color: #555;
   color: white;
+}
+img.image_nav{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top : 10px;
+  margin-bottom : 10px;
 }
