--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,24 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0px;
   width: 10%;
   background-color: #f1f1f1;
   position: fixed;
   height: 100%;
-  overflow: auto;
+  border-radius: 10px;
+  border-style:solid;
+  border-color:#FFF;
+  float: left;
+  position: 0px;
 }
+
 
 li a {
   display: block;
@@ -33,5 +44,21 @@ img.image_nav{
   margin-bottom : 10px;
 }
 body{
-  background-image: url("images/background.jpg");
+  background-image: url("https://i.imgur.com/67TIVic.jpg");
+  background-size: cover;
 }
+
+.container {  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "Menu Titre Titre"
+    "Menu . ."
+    "Menu . .";
+}
+
+.Titre { grid-area: Titre; }
+
+.Menu { grid-area: Menu; }
