--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ ul {
   height: 100%;
   border-radius: 10px;
   border-style:solid;
-  border-color:#FFF;
+  border-color: rgb(70, 187, 174);
   float: left;
   position: 0px;
 }
@@ -50,7 +50,8 @@ img.image_nav{
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    "Menu Titre Titre";
+    "Menu Titre Titre"
+    ". texte-1 texte-1";
 }
 
 .Menu {
@@ -61,10 +62,23 @@ img.image_nav{
   grid-area: Titre;
   border-radius: 10px;
   border-style:solid;
-  border-color: blue;
+  border-color: rgb(70, 187, 174);
   background-color: white;
   text-align: center;
   text-transform: uppercase;
+  font-size: 50px;
+  margin-right: 4px;
+}
+
+.texte-1 {
+  margin-top: 15px;
+  grid-area: texte-1;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(70, 187, 174);
+  background-color: white;
+  font-size: 14px;
+  margin-right: 4px;
 }
 
 body{
