--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ ul {
   margin: 0;
   padding: 0px;
   width: 10%;
-  background-color: #f1f1f1;
+  background-color: rgba(255, 255, 255, 0.5);
   position: fixed;
   height: 100%;
   border-radius: 10px;
@@ -62,10 +62,11 @@ img.image_nav{
 
 .Titre {
   grid-area: Titre;
-  border-radius: 10px;
+  /*border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);*/
+  color: white;
   text-align: center;
   text-transform: uppercase;
   font-size: 50px;
@@ -78,7 +79,7 @@ img.image_nav{
   border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);
   font-size: 20px;
   margin-right: 4px;
 }
@@ -89,17 +90,51 @@ img.image_nav{
   border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);
   font-size: 20px;
   margin-right: 4px;
 }
 
 
 body{
-  background-image: url("https://i.imgur.com/67TIVic.jpg");
+  background-image: url("https://i.imgur.com/SBtX7hH.jpg");
   background-size: cover;
 }
 #link{
   text-decoration: none;
   color: #3366ff;
+}
+
+.container-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "Gauche Droite";
+}
+
+.Gauche {
+  grid-area: Gauche;
+  margin-top: 15px;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  background-color: white;
+  font-size: 20px;
+  margin-right: 4px;
+}
+
+.Droite { grid-area: Droite;
+margin-top: 15px;
+border-radius: 10px;
+border-style:solid;
+border-color: rgb(0, 0, 0);
+background-color: white;
+font-size: 20px;
+margin-right: 4px;
+}
+img.img-gauche{
+  height: 10px;
 }
