--- a/css/index.css
+++ b/css/index.css
@@ -119,24 +119,22 @@ body{
 .Gauche {
   grid-area: Gauche;
   margin-top: 15px;
-  border-radius: 10px;
-  border-style:solid;
+  margin-bottom: 15px;
   border-color: rgb(0, 0, 0);
-  background-color: white;
   font-size: 20px;
   margin-right: 4px;
   text-align: center;
 }
 
-.Droite { grid-area: Droite;
+.Droite {
+grid-area: Droite;
 margin-top: 15px;
-border-radius: 10px;
-border-style:solid;
 border-color: rgb(0, 0, 0);
-background-color: white;
 font-size: 20px;
 margin-right: 4px;
+text-align: center;
 }
+
 .img-gauche{
   height: 300px;
   width: 350px;
