--- a/css/index.css
+++ b/css/index.css
@@ -101,7 +101,7 @@ body{
   background-image: url("https://i.imgur.com/SBtX7hH.jpg");
   background-size: cover;
 }
-#link{
+.link{
   text-decoration: none;
   color: #3366ff;
 }
@@ -148,7 +148,13 @@ text-align: center;
 .center{
   text-align : center;
 }
-.left{
-  text-align: left;
+audio {
+  height:200px;
+  width:300px;
+  background-image: url("../images/jlow.png");
+  background-size: cover;
 }
-  
+audio:hover {
+  transform: scale(1.1);
+  filter: drop-shadow(2px 3px 3px #333);
+}
