--- a/css/artistes.css
+++ b/css/artistes.css
@@ -48,26 +48,72 @@ body{
   background-image: url("https://i.imgur.com/7tJG5B4.jpg");
   background-size: cover;
 }
+h2{
+  text-decoration: underline;
+  text-align: center;
+}
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 0.6fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    "Menu David-Guetta Avicii AVB Martin-Garrix SOL";
+    "Menu David-Guetta Avicii AVB Alan-Walker SOL";
 }
 
-.David-Guetta { grid-area: David-Guetta; }
+.David-Guetta {
+  grid-area: David-Guetta;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  margin-right: 4px;
+}
 
-.Avicii { grid-area: Avicii; }
+.Avicii {
+  grid-area: Avicii;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  margin-right: 4px;
+}
 
-.AVB { grid-area: AVB; }
+.AVB {
+  grid-area: AVB;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  margin-right: 4px;
+}
 
-.Martin-Garrix { grid-area: Martin-Garrix; }
 
-.SOL { grid-area: SOL; }
+.Alan-Walker {
+  grid-area: Alan-Walker;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  margin-right: 4px;
+}
+
+
+.SOL {
+  grid-area: SOL;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  margin-right: 4px;
+}
 
 .DG{
   height:200px;
@@ -90,10 +136,10 @@ body{
   background-size: cover
 }
 
-.mg-song{
+.aw-song{
   height:200px;
   width:200px;
-  background-image: url("../images/Martin-Garrix-Annimals.jpg");
+  background-image: url("../images/alan-walker.jpg");
   background-size: cover
 }
 
@@ -105,7 +151,10 @@ body{
 }
 
 audio {
-    filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
 }
 
 audio:hover {
@@ -130,4 +179,11 @@ audio:hover {
   text-transform: uppercase;
   font-size: 50px;
   margin-right: 4px;
+}
+.artistes {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 200px;
+  width: 200px;
 }
