--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,8 @@ img.image_nav{
   grid-template-areas:
     "Menu Titre Titre"
     ". texte-1 texte-1"
-    ". texte-2 texte-2";
+    ". texte-2 texte-2"
+    ". footer footer";
 }
 
 .Menu {
@@ -95,7 +96,22 @@ img.image_nav{
   margin-right: 4px;
   padding-left: 10px;
 }
-
+.footer{
+  margin-top: 15px;
+  grid-area: footer;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  background-color: rgb(97, 87, 87);
+  font-size: 20px;
+  margin-right: 4px;
+  color : white;
+  text-transform: uppercase;
+  text-align: center;
+}
+.usage-images{
+  font-size: 10px;
+}
 
 body{
   background-image: url("https://i.imgur.com/SBtX7hH.jpg");
@@ -103,7 +119,7 @@ body{
 }
 .link{
   text-decoration: none;
-  color: #3366ff;
+  color: #F601E6;
 }
 
 .container-2 {
@@ -157,4 +173,7 @@ audio {
 audio:hover {
   transform: scale(1.1);
   filter: drop-shadow(2px 3px 3px #333);
+}
+h2{
+  text-decoration: underline;
 }
