--- a/css/materiel.css
+++ b/css/materiel.css
@@ -1,21 +1,83 @@
+*{
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0px;
+  width: 10%;
+  background-color: rgba(255, 255, 255, 0.5);
+  position: fixed;
+  height: 100%;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  float: left;
+  position: 0px;
+}
+
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+li a.active {
+  background-color: #3366ff;
+  color: white;
+}
+
+li a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+img.image_nav{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top : 10px;
+  margin-bottom : 10px;
+}
+body{
+  background-image: url("https://i.imgur.com/SBtX7hH.jpg");
+  background-size: cover;
+}
+
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 0.3fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    "Menu Titre ."
-    "Menu . ."
-    "Menu . .";
+    "Menu Titre Titre"
+    "Menu contenue contenue"
+    "Menu contenue contenue";
 }
 
 .Titre {
   grid-area: Titre;
-  border-radius: 10px;
-  border-style:solid;
-  border-color: blue;
-  background-color: white;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 50px;
+  margin-right: 4px;
 }
 
 .Menu { grid-area: Menu; }
+
+.contenue{
+  margin-top: 15px;
+  grid-area: contenue;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  margin-right: 4px;
+}
