Change container name

--- a/css/artistes.css
+++ b/css/artistes.css
@@ -53,7 +53,7 @@ h2{
   text-align: center;
 }
 
-.container {
+.principal {
   display: grid;
   grid-template-columns: 0.6fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
