Change image location

--- a/css/artistes.css
+++ b/css/artistes.css
@@ -118,35 +118,35 @@ h2{
 .DG{
   height:200px;
   width:200px;
-  background-image: url("../images/david-guetta.jpg");
+  background-image: url("https://i.imgur.com/KQVJgey.jpg");
   background-size: cover
 }
 
 .avicii-song{
   height:200px;
   width:200px;
-  background-image: url("../images/avicii.jpg");
+  background-image: url("https://i.imgur.com/aGQpMhD.jpg");
   background-size: cover
 }
 
 .avb-song{
   height:200px;
   width:200px;
-  background-image: url("../images/avb-Bla-bla-bla-bla.jpg");
+  background-image: url("https://i.imgur.com/zOWC1Qu.jpg");
   background-size: cover
 }
 
 .aw-song{
   height:200px;
   width:200px;
-  background-image: url("../images/alan-walker.jpg");
+  background-image: url("https://i.imgur.com/531biWE.jpg");
   background-size: cover
 }
 
 .sol-song{
   height:200px;
   width:200px;
-  background-image: url("../images/SOL-Im-so-excited.jpg");
+  background-image: url("https://i.imgur.com/ic4GIWu.jpg");
   background-size: cover
 }
 
