--- a/css/sources.css
+++ b/css/sources.css
@@ -43,7 +43,7 @@ img.image_nav{
   margin-bottom : 10px;
 }
 body{
-  background-image: url("https://i.imgur.com/7lQ766U.jpg");
+  background-image: url("https://i.imgur.com/twilfDm.jpg");
   background-size: cover;
 }
 
