--- a/css/index.css
+++ b/css/index.css
@@ -167,3 +167,33 @@ audio:hover {
 h2{
   text-decoration: underline;
 }
+
+@media(max-width:1000px) {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+
+  li {
+    float: left;
+  }
+
+  li a {
+    display: block;
+    color: #f1f1f1;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #3366ff;
+  }
+  .active {
+    background-color: #3366ff;
+  }
+}
