--- a/css/materiel.css
+++ b/css/materiel.css
@@ -7,40 +7,42 @@
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 0px;
-  width: 10%;
-  background-color: rgba(255, 255, 255, 0.5);
-  position: fixed;
-  height: 100%;
-  border-radius: 10px;
-  border-style:solid;
-  border-color: rgb(0, 0, 0);
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
   float: left;
 }
 
-
 li a {
   display: block;
-  color: #000;
-  padding: 8px 16px;
+  color: #f1f1f1;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
 }
 
-li a.active {
+/* Change the link color to #111 (black) on hover */
+li a:hover {
   background-color: #3366ff;
-  color: white;
 }
 
-li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
+.active {
+  background-color: #3366ff;
 }
-img.image_nav{
+
+.image_nav{ /*Propriètes de la classe image_nav*/
   display: block;
+  height: 40px;
+  width: 40px;
   margin-left: auto;
   margin-right: auto;
   margin-top : 10px;
   margin-bottom : 10px;
+  margin-right: 20px;
+  border-radius: 50px;
 }
 body{
   background-image: url("https://i.imgur.com/7lQ766U.jpg");
@@ -49,12 +51,13 @@ body{
 
 .container {
   display: grid;
-  grid-template-columns: 0.3fr 1fr 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.2fr 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    "Menu Titre Titre";
+    "Titre Titre"
+    "contenue contenue";
 }
 
 .Titre {
@@ -66,8 +69,6 @@ body{
   margin-right: 4px;
 }
 
-.Menu { grid-area: Menu; }
-
 .contenue{
   margin-top: 15px;
   grid-area: contenue;
@@ -77,4 +78,32 @@ body{
   background-color: rgba(255, 255, 255, 0.5);
   font-size: 20px;
   margin-right: 4px;
+}
+
+.contenu {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "Table Lumière Enceintes";
+}
+
+.Table {
+  grid-area: Table;
+  text-align: center;
+}
+
+
+.Lumière { grid-area: Lumière; }
+
+.Enceintes { grid-area: Enceintes; }
+
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
