--- a/css/sources.css
+++ b/css/sources.css
@@ -7,40 +7,43 @@
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 0px;
-  width: 10%;
-  background-color: rgba(255, 255, 255, 0.5);
-  position: fixed;
-  height: 100%;
-  border-radius: 10px;
-  border-style:solid;
-  border-color: rgb(0, 0, 0);
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
   float: left;
 }
 
-
 li a {
   display: block;
-  color: #000;
-  padding: 8px 16px;
+  color: #f1f1f1;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
 }
 
-li a.active {
+/* Change the link color to #111 (black) on hover */
+li a:hover {
   background-color: #3366ff;
-  color: white;
 }
 
-li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
+.active {
+  background-color: #3366ff;
 }
-img.image_nav{
+
+
+.image_nav{ /*Propriètes de la classe image_nav*/
   display: block;
+  height: 40px;
+  width: 40px;
   margin-left: auto;
   margin-right: auto;
   margin-top : 10px;
   margin-bottom : 10px;
+  margin-right: 20px;
+  border-radius: 50px;
 }
 body{
   background-image: url("https://i.imgur.com/twilfDm.jpg");
