--- a/css/materiel.css
+++ b/css/materiel.css
@@ -52,12 +52,27 @@ body{
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 0.2fr 1fr;
+  grid-template-rows: 0.1fr 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
     "Titre Titre"
-    "contenue contenue";
+    "contenue contenue"
+    "footer footer";
+}
+
+.footer{
+  margin-top: 15px;
+  grid-area: footer;
+  border-radius: 10px;
+  border-style:solid;
+  border-color: rgb(0, 0, 0);
+  background-color: rgb(97, 87, 87);
+  font-size: 20px;
+  margin-right: 4px;
+  color : white;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .Titre {
@@ -85,7 +100,7 @@ body{
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   grid-auto-columns: 1fr;
-  gap: 0px 0px;
+  gap: 10px 10px;
   grid-auto-flow: row;
   grid-template-areas:
     "Table Lumière Enceintes";
@@ -106,4 +121,8 @@ img{
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+.img_lumiere{
+  height: 480;
+  width: 261;
 }
