--- a/css/index.css
+++ b/css/index.css
@@ -170,3 +170,17 @@ audio:hover {
 h2{
   text-decoration: underline;
 }
+.copy-left {
+  display: inline-block;
+  text-align: center;
+  margin: 0px;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: “FlipH”;
+}
+.details{
+  font-size: 12px;
+}
