--- a/css/materiel.css
+++ b/css/materiel.css
@@ -122,7 +122,28 @@ img{
   margin-left: auto;
   margin-right: auto;
 }
-.img_lumiere{
-  height: 480;
-  width: 261;
+.copy-left {
+  display: inline-block;
+  text-align: center;
+  margin: 0px;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: “FlipH”;
+}
+.copy-left {
+  display: inline-block;
+  text-align: center;
+  margin: 0px;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: “FlipH”;
+}
+.details{
+  font-size: 12px;
 }
