--- a/css/sources.css
+++ b/css/sources.css
@@ -99,3 +99,17 @@ body{
   text-transform: uppercase;
   text-align: center;
 }
+.copy-left {
+  display: inline-block;
+  text-align: center;
+  margin: 0px;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: “FlipH”;
+}
+.details{
+  font-size: 12px;
+}
