--- a/css/artistes.css
+++ b/css/artistes.css
@@ -58,7 +58,7 @@ h2{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
-  gap: 0px 0px;
+  gap: 3px;
   grid-auto-flow: row;
   grid-template-areas:
     "David-Guetta Avicii AVB Alan-Walker SOL"
@@ -70,9 +70,11 @@ h2{
   border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   font-size: 20px;
   margin-right: 4px;
+  margin-left: 7px;
+
 }
 
 .Avicii {
@@ -80,7 +82,7 @@ h2{
   border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   font-size: 20px;
   margin-right: 4px;
 }
@@ -90,7 +92,7 @@ h2{
   border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   font-size: 20px;
   margin-right: 4px;
 }
@@ -101,7 +103,7 @@ h2{
   border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   font-size: 20px;
   margin-right: 4px;
 }
@@ -112,9 +114,9 @@ h2{
   border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   font-size: 20px;
-  margin-right: 4px;
+  margin-right: 7px;
 }
 
 .DG{
