--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,7 @@ li a:hover {
   border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   font-size: 20px;
   margin-right: 4px;
 }
@@ -87,7 +87,7 @@ li a:hover {
   border-radius: 10px;
   border-style:solid;
   border-color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   font-size: 20px;
   margin-right: 4px;
   padding-left: 10px;
@@ -113,7 +113,8 @@ body{
 }
 .link{
   text-decoration: none;
-  color: #F601E6;
+  color: #7a0472;
+  font-weight: bold;
 }
 /*Propriètes des Grilles secondaire, Gauche,Droite*/
 .secondaire {
